# hypoevolve

./: .gitignore  README.md  example.py  pyproject.toml
docs/: interface-algorithm.md  interface-diff.md  interface-hypoevolve.md  interface-openevolve.md  interface-prompt.md
hypoevolve/: __init__.py
hypoevolve/core/: __init__.py  config.py  controller.py  program.py
hypoevolve/evaluation/: __init__.py  evaluator.py
hypoevolve/llm/: __init__.py  client.py  prompts.py
hypoevolve/utils/: __init__.py  code_utils.py  logger.py
tests/: test_basic.py  test_evolution_history.py  test_integration.py  test_program.py  test_prompts.py
